Replace buttons with links in navigation menu

--- a/swp.html
+++ b/swp.html
@@ -628,10 +628,10 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="nav-menu">
-            <button class="nav-btn" onclick="navigateTo('sip')">SIP Calculator</button>
-            <button class="nav-btn" onclick="navigateTo('lumpsum')">Lumpsum Calculator</button>
-            <button class="nav-btn" onclick="navigateTo('loan')">Loan Calculator</button>
-            <button class="nav-btn active" onclick="navigateTo('swp')">SWP Calculator</button>
+             <a href="sip.html">SIP</a>
+             <a href="lumpsum.html">Lumpsum</a>
+             <a href="loan.html">Loan</a>
+             <a href="swp.html">SWP</a>
         </nav>
     </header>
 
