--- a/loan.html
+++ b/loan.html
@@ -563,7 +563,7 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="nav-menu">
-             <a href="sip.html">SIP</a>
+             <a href="index.html">SIP</a>
              <a href="lumpsum.html">Lumpsum</a>
              <a href="loan.html">Loan</a>
              <a href="swp.html">SWP</a>
