Replace nav-menu with glass-nav styling

--- a/lumpsum.html
+++ b/lumpsum.html
@@ -587,12 +587,12 @@
             </div>
         </div>
         <!-- Navigation Menu -->
-        <nav class="nav-menu">
-             <a href="index.html">SIP</a>
-             <a href="lumpsum.html">Lumpsum</a>
-             <a href="loan.html">Loan</a>
-             <a href="swp.html">SWP</a>
-        </nav>
+       <nav class="glass-nav">
+  <a href="index.html" class="glass-btn active">SIP</a>
+  <a href="lumpsum.html" class="glass-btn">Lumpsum</a> 
+  <a href="loan.html" class="glass-btn">Loan</a> 
+  <a href="swp.html" class="glass-btn">SWP</a> 
+</nav>
     </header>
 
     <!-- Main Container -->
