Refactor navigation styles to use glass effect

--- a/loan.html
+++ b/loan.html
@@ -64,52 +64,45 @@
             flex-wrap: wrap;
         }
 
-        /* Navigation Menu - Apple Liquid Glass */
-        .nav-menu {
-            background: rgba(255, 255, 255, 0.25);
-            backdrop-filter: blur(30px);
-            -webkit-backdrop-filter: blur(30px);
-            border: 1px solid rgba(255, 255, 255, 0.4);
-            border-radius: 20px;
-            padding: 12px 16px;
-            display: flex;
-            gap: 12px;
-            justify-content: center;
-            max-width: 1200px;
-            margin: 0 auto;
-            margin-top: 16px;
-            box-shadow: 
-                0 16px 48px 0 rgba(0, 0, 0, 0.08),
-                inset 0 1px 2px 0 rgba(255, 255, 255, 0.6),
-                inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05);
-        }
+         /* Glass Navigation Container */
+.glass-nav {
+  display: flex;
+  gap: 14px;
+  justify-content: center;
+  padding: 14px;
+  margin-bottom: 24px;
+  background: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+}
 
-        .nav-btn {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 12px;
-            font-size: 13px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-            background: transparent;
-            color: var(--text-dark);
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-        }
+/* Glass Buttons */
+.glass-btn {
+  text-decoration: none;
+  padding: 10px 18px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #000;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.55);
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  transition: all 0.25s ease;
+}
 
-        .nav-btn:hover {
-            background: rgba(29, 70, 54, 0.1);
-            transform: translateY(-2px);
-        }
+/* Hover Effect */
+.glass-btn:hover {
+  background: rgba(0, 0, 0, 0.06);
+}
 
-        .nav-btn.active {
-            background: var(--hunter-green);
-            color: var(--white);
-            box-shadow: 0 4px 12px rgba(29, 70, 54, 0.3);
-        }
-
+/* Active Page */
+.glass-btn.active {
+  background: rgba(0, 0, 0, 0.85);
+  color: #fff;
+  border-color: rgba(0, 0, 0, 0.85);
+}
         .logo-wrapper {
             display: flex;
             align-items: center;
