--- a/lumpsum.html
+++ b/lumpsum.html
@@ -49,7 +49,7 @@
             padding: 24px 20px;
             text-align: center;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
-            position: sticky;
+            position: static;
             top: 0;
             z-index: 100;
         }
