--- a/lumpsum.html
+++ b/lumpsum.html
@@ -582,8 +582,8 @@
         </div>
         <!-- Navigation Menu -->
        <nav class="glass-nav">
-  <a href="index.html" class="glass-btn active">SIP</a>
-  <a href="lumpsum.html" class="glass-btn">Lumpsum</a> 
+  <a href="index.html" class="glass-btn">SIP</a>
+  <a href="lumpsum.html" class="glass-btn active">Lumpsum</a> 
   <a href="loan.html" class="glass-btn">Loan</a> 
   <a href="swp.html" class="glass-btn">SWP</a> 
 </nav>
