--- a/swp.html
+++ b/swp.html
@@ -622,10 +622,10 @@
         </div>
         <!-- Navigation Menu -->
        <nav class="glass-nav">
-  <a href="index.html" class="glass-btn active">SIP</a>
+  <a href="index.html" class="glass-btn">SIP</a>
   <a href="lumpsum.html" class="glass-btn">Lumpsum</a> 
   <a href="loan.html" class="glass-btn">Loan</a> 
-  <a href="swp.html" class="glass-btn">SWP</a> 
+  <a href="swp.html" class="glass-btn active">SWP</a> 
 </nav>
     </header>
 
